WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20289
[qt] screenDepthPerComponent returns the wrong value
https://bugs.webkit.org/show_bug.cgi?id=20289
Summary
[qt] screenDepthPerComponent returns the wrong value
Marco Barisione
Reported
2008-08-05 12:46:55 PDT
Reading the code in other ports and from its name it seems that screenDepthPerComponent should return the number of pixels for each colour (for instance 8 if the screen depth is 24), but in the qt port it seems to just return the screen depth (24 in the example).
Attachments
Patch
(2.07 KB, patch)
2010-11-07 05:34 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(5.27 KB, patch)
2010-11-07 06:41 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(5.21 KB, patch)
2010-11-07 07:10 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tor Arne Vestbø
Comment 1
2010-03-10 03:23:47 PST
http://www.w3.org/TR/css3-mediaqueries/#color
Robert Hogan
Comment 2
2010-11-07 05:34:00 PST
Created
attachment 73194
[details]
Patch
Andreas Kling
Comment 3
2010-11-07 05:40:58 PST
Comment on
attachment 73194
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73194&action=review
> WebCore/ChangeLog:10 > + No layout tests possible for this I think.
On the contrary! :-)
http://www.w3.org/TR/css3-mediaqueries/#color
Robert Hogan
Comment 4
2010-11-07 06:41:38 PST
Created
attachment 73195
[details]
Patch
Andreas Kling
Comment 5
2010-11-07 07:04:56 PST
Comment on
attachment 73195
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73195&action=review
LGTM.
> WebCore/ChangeLog:14 > + Need a short description and bug URL (OOPS!)
Oops, indeed. Remove this when landing.
Robert Hogan
Comment 6
2010-11-07 07:10:01 PST
Created
attachment 73196
[details]
Patch
WebKit Commit Bot
Comment 7
2010-11-07 07:26:03 PST
Comment on
attachment 73196
[details]
Patch Clearing flags on attachment: 73196 Committed
r71483
: <
http://trac.webkit.org/changeset/71483
>
WebKit Commit Bot
Comment 8
2010-11-07 07:26:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug