2010-11-07  Robert Hogan  <robert@webkit.org>

Reviewed by Andreas Kling.

        [qt] screenDepthPerComponent returns the wrong value

        Return best estimate of the number of bits per color
        rather than screen depth.

        Add a layout test to sanity check screenDepthPerComponent.

        https://bugs.webkit.org/show_bug.cgi?id=20289

        * fast/css/media-rule-screenDepthPerComponent-expected.txt: Added.
        * fast/css/media-rule-screenDepthPerComponent.html: Added.
2010-11-07  Robert Hogan  <robert@webkit.org>

        Reviewed by Andreas Kling.

        [qt] screenDepthPerComponent returns the wrong value

        Return best estimate of the number of bits per color
        rather than screen depth.

        Add a layout test to sanity check screenDepthPerComponent.

        https://bugs.webkit.org/show_bug.cgi?id=20289

        Test: fast/css/media-rule-screenDepthPerComponent.html

        * platform/qt/PlatformScreenQt.cpp:
        (WebCore::screenDepthPerComponent):

Canonical link: https://commits.webkit.org/61970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71483 268f45cc-cd09-0410-ab3c-d52691b4dbfc